Making FindBugs happier